--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather App</title>
+  <title>Weather Finder</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Weather Information</h2>
-  <input type="text" id="city" placeholder="Enter city name">
-  <button onclick="getWeather()">Get Weather</button>
-  <div id="weather-result"></div>
+  <div class="container">
+    <h1>Weather App</h1>
+    <input type="text" id="cityInput" placeholder="Enter city name" />
+    <button onclick="getWeather()">Get Weather</button>
+    <div id="weatherResult"></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
